# Detector-de-Vazamento-de-G-s

./: README.md
PROJETOF_gas/: .cproject  .project  CMakeLists.txt  PROJETOF_gas Debug (1).launch  PROJETOF_gas Debug.launch  STM32F103C8TX_FLASH.ld
PROJETOF_gas/Debug/: CMakeCache.txt  Makefile  PROJETOF_gas.elf  PROJETOF_gas.hex  cmake_install.cmake  test.map
PROJETOF_gas/Sources/: main.c  sensor_gas.c  sensor_gas.h
